Just another update

--- a/Python od podstaw/7. Jakość kodu i obsługa błędów.md
+++ b/Python od podstaw/7. Jakość kodu i obsługa błędów.md
@@ -1,40 +1,88 @@
 ### 7.1 PEP 8
-...
+Nie każdy kod, który się wykonuje jest dobrym, poprawnie napisanym kodem. Istnieje szereg zaleceń dotyczących właściwego formatowania kodu. Są one opisane w dokumencie o nazwie [PEP 8](https://peps.python.org/pep-0008/). Poniżej znajduje się kilka przykładów:
 
+1. Używamy snake case'a
+```python
+# Dobrze
+variable_name = "abc"
+
+
+# Źle
+variableName = "abc"
+```
+
+2. Zalecana maksymalna długość linii to 79 znaków
+Ta reguła często jest świadomie ignorowana. Jeśli posiadanie w kodzie dłuższych linii nam nie przeszkadza, możemy zwiększyć długość np. do 100 znaków. Dobrze jednak jest mieć z góry określone maksimum i nie przekraczać go.
+
+3. Maksymalnie dwie linie przerwy w kodzie. Kiedy jesteśmy wewnątrz funkcji - maksymalnie jedna
+
+```python
+print(2+2)
+
+print(2+2)  # jedna linia przerwy
+
+
+print(2+2)  # dwie linie przerwy
+
+
+
+print(2+2)  # trzy linie przerwy - za dużo
+```
+
+4. Spacje wokół operatora przypisania podczas tworzenia zmiennych
+```python
+# Dobrze
+x = 1
+
+
+# Źle
+x=1
+```
+
+5. Brak spacji wokół operatora przypisania podczas przekazywania argumentów do funkcji
+```python
+# Dobrze
+def func(a=1, b=2):
+    return a + b
+
+
+# Źle
+def func(a = 1, b = 2):
+    return a + b
+```
+
+**PEP 8 - podsumowanie:**
+- Istnieje szereg zaleceń dotyczących pisania poprawnego stylistycznie kodu - można znaleźć jej w PEP 8
+- Trzymanie się tych zasad sprawi że kod będzie bardziej czytelny a także zachowaspójność kiedy pracuje nad nim więcej osób
 ---
 ---
 ---
 &nbsp;
 ### 7.2 Type annotations
-...
 
 ---
 ---
 ---
 &nbsp;
 ### 7.3 Stack Overflow
-...
 
 ---
 ---
 ---
 &nbsp;
 ### 7.4 Debugowanie
-...
 
 ---
 ---
 ---
 &nbsp;
 ### 7.5 Linebreak
-...
 
 ---
 ---
 ---
 &nbsp;
 ### 7.6 Wyjątki
-...
 
 ---
 ---
