Just another update

--- a/Python od podstaw/7. Jakość kodu i obsługa błędów.md
+++ b/Python od podstaw/7. Jakość kodu i obsługa błędów.md
@@ -59,7 +59,67 @@ def func(a = 1, b = 2):
 ---
 &nbsp;
 ### 7.2 Type annotations
+Python jest językiem typowanym dynamicznie, w związku z czym deklarowanie typów zmiennych czy argumentów funkcji nie jest konieczne. Istnieje jednak taka możliwość i korzystanie z niej sprawia, że kod jest bardziej czytelny. Dzięki temu kiedy widzimy po raz pierwszy definicję funkcji czy zmiennej od razu wiemy jakich typów danych możemy się spodziewać.
 
+Typy w funkcjach anotujemy w następujący sposób:
+```python
+def determine_winner(human_power: float, zombie_power: float) -> int:
+    """
+    This function takes human power and zombie power as inputs,
+    compares them and returns information about the battle result
+    
+    Args:
+        human_power (float): power of a human
+        zombie_power (float): power of a zombie
+    
+    Returns:
+        (int): result of the battle where 1 is human's victory,
+               -1 is zombie's victory and 0 is a draw
+    """
+    
+    if human_power > zombie_power:
+        return 1
+    elif human_power < zombie_power:
+        return -1
+    else:
+        return 0
+
+
+winner: int = determine_winner(4.23, 5.24)
+```
+
+Jeśli chcemy aby jakaś zmienna / argument mogły przyjmować więcej niż jeden typ, należy użyć `Union` z biblioteki `typing`:
+
+```python
+from typing import Union
+
+
+def determine_winner(human_power: Union[int, float], zombie_power: Union[int, float]) -> int:
+    """
+    This function takes human power and zombie power as inputs,
+    compares them and returns information about the battle result
+    
+    Args:
+        human_power (float): power of a human
+        zombie_power (float): power of a zombie
+    
+    Returns:
+        (int): result of the battle where 1 is human's victory,
+               -1 is zombie's victory and 0 is a draw
+    """
+    
+    if human_power > zombie_power:
+        return 1
+    elif human_power < zombie_power:
+        return -1
+    else:
+        return 0
+```
+
+***Type annotations* - podsumowanie:**
+- Deklarowanie typów dla zmiennych oraz argumentów funkcji jest w Pythonie opcjonalne
+- Deklarowanie ich (poprzez *type annotations*) zwiększa czytelność kodu i pozwala się w nim lepiej orientować
+- Jeśli nie będziemy przestrzegać deklaracji dotyczących typów danych program będzie działał poprawnie, chociaż niektóre IDE mogą podkreślać taki kod
 ---
 ---
 ---
