Just another update

--- a/Python od podstaw/7. Jakość kodu i obsługa błędów.md
+++ b/Python od podstaw/7. Jakość kodu i obsługa błędów.md
@@ -61,7 +61,7 @@ def func(a = 1, b = 2):
 ### 7.2 Type annotations
 Python jest językiem typowanym dynamicznie, w związku z czym deklarowanie typów zmiennych czy argumentów funkcji nie jest konieczne. Istnieje jednak taka możliwość i korzystanie z niej sprawia, że kod jest bardziej czytelny. Dzięki temu kiedy widzimy po raz pierwszy definicję funkcji czy zmiennej od razu wiemy jakich typów danych możemy się spodziewać.
 
-Typy w funkcjach anotujemy w następujący sposób:
+Typy danych dla argumentów funkcji czy zmiennych anotujemy w następujący sposób:
 ```python
 def determine_winner(human_power: float, zombie_power: float) -> int:
     """
@@ -125,7 +125,18 @@ def determine_winner(human_power: Union[int, float], zombie_power: Union[int, fl
 ---
 &nbsp;
 ### 7.3 Stack Overflow
+Jednym z nieodłącznych elementów programowania jest szukanie rozwiązań pojawiających się problemów w internecie. Często odpowiedź na nasze pytanie już są przygotowana i znajdują się na [Stack Overflow](https://stackoverflow.com/). Jest to serwis, na którym programiści mogą zapytać o to jak rozwiązać pewien problem albo co oznacza błąd, którego nie rozumieją. 
 
+Wynika ze Stacka często pojawiają się wysoko w wynikach wyszukiwania:
+![[stack1.png]]
+
+![[stack2.png]]
+
+Jedną z zalet Stack Overflow jest system punktacji zarówno pytań jak i odpowiedzi, który zwiększa widoczność najbardziej wartościowych treści.
+
+**Stack Overflow - podsumowanie:**
+- Podczas programowania często napotykamy problemy, które zostały już rozwiązane przez kogoś innego
+- Wiele z nich zostało opisanych na Stack Overflow - serwisie dla programistów, którego celem jest opisywanie i rozwiązywanie tego typu problemów 
 ---
 ---
 ---
