Just another update

--- a/Python od podstaw/7. Jakość kodu i obsługa błędów.md
+++ b/Python od podstaw/7. Jakość kodu i obsługa błędów.md
@@ -142,7 +142,12 @@ Jedną z zalet Stack Overflow jest system punktacji zarówno pytań jak i odpowi
 ---
 &nbsp;
 ### 7.4 Debugowanie
+Debugowanie (ang. *debugging*) to proces szukania i naprawiania błędów w programie. Istnieją różne sposoby na to żeby zlokalizować błędny zapis w kodzie. Przykładowe dwa to:
 
+#### 7.4.1 Analiza tracebacku
+*Traceback* to komunikat, który zostaje wyświetlony w terminalu w momencie kiedy w trakcie wykonywania programu pojawi się błąd.
+
+#### 7.4.2 Debugger w IDE
 ---
 ---
 ---
