Just another update

--- a/Python od podstaw/7. Jakość kodu i obsługa błędów.md
+++ b/Python od podstaw/7. Jakość kodu i obsługa błędów.md
@@ -145,9 +145,70 @@ Jedną z zalet Stack Overflow jest system punktacji zarówno pytań jak i odpowi
 Debugowanie (ang. *debugging*) to proces szukania i naprawiania błędów w programie. Istnieją różne sposoby na to żeby zlokalizować błędny zapis w kodzie. Przykładowe dwa to:
 
 #### 7.4.1 Analiza tracebacku
-*Traceback* to komunikat, który zostaje wyświetlony w terminalu w momencie kiedy w trakcie wykonywania programu pojawi się błąd.
+*Traceback* to komunikat, który zostaje wyświetlony w terminalu w momencie kiedy w trakcie wykonywania programu pojawi się błąd. Zawiera on informację o tym, w której linijce znajduje się problem a także - jeśli wywołujemy tam jakąś funkcję - gdzie w tej funkcji zlokalizowany jest błąd. W ten sposób możemy dokładnie prześledzić łańcuch wywołań kolejnych funkcji i zlokalizować buga.
 
-#### 7.4.2 Debugger w IDE
+```python
+def decide_where_to_move(human, zombies_list):
+    # Okodowanie procesu decyzyjnego
+    new_x = human["x"] + "1"   # !!! w tej linijce jest błąd
+    new_y = human["y"] + "1"
+    return new_x, new_y
+
+
+def move_all_humans(humans_list, zombies_list):
+    for h in humans_list:
+        new_x, new_y = decide_where_to_move(h, zombies_list)
+        h["x"] = new_x
+        h["y"] = new_y
+    return humans_list
+
+
+humans_list = [{"x": 1, "y": 2, "velocity": 5, "power": 3}]
+zombies_list = [{"x": 4, "y": -3, "power": 5}, {"x": 8, "y": 0, "power": 6}]
+
+humans_list = move_all_humans(humans_list, zombies_list)
+```
+
+Po próbie uruchomienia powyższego kodu pojawi się następujący komunikat:
+```python
+---------------------------------------------------------------------------
+TypeError                                 Traceback (most recent call last)
+Input In [3], in <cell line: 4>()
+      1 humans_list = [{"x": 1, "y": 2, "velocity": 5, "power": 3}]
+      2 zombies_list = [{"x": 4, "y": -3, "power": 5}, {"x": 8, "y": 0, "power": 6}]
+----> 4 humans_list = move_all_humans(humans_list, zombies_list)
+
+Input In [2], in move_all_humans(humans_list, zombies_list)
+      1 def move_all_humans(humans_list, zombies_list):
+      2     for h in humans_list:
+----> 3         new_x, new_y = decide_where_to_move(h, zombies_list)
+      4         h["x"] = new_x
+      5         h["y"] = new_y
+
+Input In [1], in decide_where_to_move(human, zombies_list)
+      1 def decide_where_to_move(human, zombies_list):
+      2     # Okodowanie procesu decyzyjnego
+----> 3     new_x = human["x"] + "1" 
+      4     new_y = human["y"] + "1"
+      5     return new_x, new_y
+
+TypeError: unsupported operand type(s) for +: 'int' and 'str'
+```
+
+#### 7.4.2 Debuger w IDE
+Debuger jest narzędziem, które pozwala zatrzymać wykonywanie programu w zadanym miejscu i podejrzeć wartości poszczególnych zmiennych czy wyrażeń wpisywanych do terminala. Aby podczas debugowania zatrzymać kod na określonej linijce należy postawić przy niej *breakpoint* klikając w odpowiednim miejscu między numerem linii a samym kodem:
+
+![[debuger1.png]]
+
+Wykonując skrypt należy wybrać opcję *Debug* zamiast *Run*. Kiedy program dotrze do *breakpointa* - zatrzyma się. Możemy wówczas między innymi:
+- wpisywać do terminala wyrażenia, których wartość chcemy wyznaczyć (np. `humans_list[0]["x"`)
+- przejść do kolejnej linijki w ramach scope'u, w którym się znajdujemy (w PyCharmie nazywa się to `Step Over`)
+- wejść do środka funkcji, której wywołanie znajduje się w aktualnej linii (w PyCharmie nazywa się to `Step Into`)
+
+**Debugowanie - podsumowanie:**
+- Proces lokalizacji oraz eliminacji błędów w kodzie nazywa się *debugowaniem*
+- Jednym ze sposób debugowania jest analiza *tracebacku* czyli komunikatu, który pojawia się w terminalu po wystąpieniu błędu
+- Przydatnym narzędziem podczas szukania błędów jest debuger, który pozwala zatrzymać wykonywanie programu w dowolnym miejscu
 ---
 ---
 ---
