Just another update

--- a/Python od podstaw/7. Jakość kodu i obsługa błędów.md
+++ b/Python od podstaw/7. Jakość kodu i obsługa błędów.md
@@ -144,8 +144,10 @@ Jedną z zalet Stack Overflow jest system punktacji zarówno pytań jak i odpowi
 ### 7.4 Debugowanie
 Debugowanie (ang. *debugging*) to proces szukania i naprawiania błędów w programie. Istnieją różne sposoby na to żeby zlokalizować błędny zapis w kodzie. Przykładowe dwa to:
 
-#### 7.4.1 Analiza tracebacku
+#### 7.4.1 Analiza *tracebacku*
 *Traceback* to komunikat, który zostaje wyświetlony w terminalu w momencie kiedy w trakcie wykonywania programu pojawi się błąd. Zawiera on informację o tym, w której linijce znajduje się problem a także - jeśli wywołujemy tam jakąś funkcję - gdzie w tej funkcji zlokalizowany jest błąd. W ten sposób możemy dokładnie prześledzić łańcuch wywołań kolejnych funkcji i zlokalizować buga.
+
+W poniższym kodzie znajduje się błąd w funkcji `decide_where_to_move`:
 
 ```python
 def decide_where_to_move(human, zombies_list):
