--- a/Python od podstaw/7. Jakość kodu i obsługa błędów.md
+++ b/Python od podstaw/7. Jakość kodu i obsługa błędów.md
@@ -171,7 +171,7 @@ zombies_list = [{"x": 4, "y": -3, "power": 5}, {"x": 8, "y": 0, "power": 6}]
 humans_list = move_all_humans(humans_list, zombies_list)
 ```
 
-Po próbie uruchomienia powyższego kodu pojawi się następujący komunikat:
+Po próbie uruchomienia tego kodu pojawi się następujący komunikat:
 ```python
 ---------------------------------------------------------------------------
 TypeError                                 Traceback (most recent call last)
