Just another update

--- a/Python od podstaw/7. Jakość kodu i obsługa błędów.md
+++ b/Python od podstaw/7. Jakość kodu i obsługa błędów.md
@@ -147,7 +147,7 @@ Debugowanie (ang. *debugging*) to proces szukania i naprawiania błędów w prog
 #### 7.4.1 Analiza *tracebacku*
 *Traceback* to komunikat, który zostaje wyświetlony w terminalu w momencie kiedy w trakcie wykonywania programu pojawi się błąd. Zawiera on informację o tym, w której linijce znajduje się problem a także - jeśli wywołujemy tam jakąś funkcję - gdzie w tej funkcji zlokalizowany jest błąd. W ten sposób możemy dokładnie prześledzić łańcuch wywołań kolejnych funkcji i zlokalizować buga.
 
-W poniższym kodzie znajduje się błąd w funkcji `decide_where_to_move`:
+W poniższym kodzie w funkcji `decide_where_to_move` znajduje się błąd:
 
 ```python
 def decide_where_to_move(human, zombies_list):
@@ -171,7 +171,7 @@ zombies_list = [{"x": 4, "y": -3, "power": 5}, {"x": 8, "y": 0, "power": 6}]
 humans_list = move_all_humans(humans_list, zombies_list)
 ```
 
-Po próbie uruchomienia tego kodu pojawi się następujący komunikat:
+Po próbie uruchomienia skryptu pojawi się następujący komunikat:
 ```python
 ---------------------------------------------------------------------------
 TypeError                                 Traceback (most recent call last)
@@ -216,7 +216,55 @@ Wykonując skrypt należy wybrać opcję *Debug* zamiast *Run*. Kiedy program do
 ---
 &nbsp;
 ### 7.5 Linebreak
+Jeśli linijka kodu jest zbyt długa możemy na różne sposoby ją złamać, czyli przenieść jej część do kolejnej linii. Takie przeniesienie nazywane jest *linebreak*. 
 
+Jeśli definiujemy strukturę danych, której elementy znajdują się w różnego rodzaju nawiasach, możemy wstawić nową linię po dowolnym nawiasie:
+
+```python
+list_of_zombies = [
+    {"class": "Zombie",
+     "x": 1,
+     "y": 2
+    },
+    {
+        "class": "Zombie",
+        "x": -1.1,
+        "y": 13.2
+    },
+    
+    {
+        "class": "Zombie",
+        "x": -4,
+        "y": 12
+    }
+]
+```
+
+Jeśli chcemy złamać linię, w której nie ma nawiasów możemy użyć znaku `\` np. przed operatorem takim jak `+` czy `-`:
+
+```python
+1 + 1 + 1 + 1 + 1 + 1 + 1 \
+    + 1 + 1 + 1 + 1
+```
+
+Wówczas kolejna linia powinna być wcięta. Możemy również w ten sposób podzielić długiego stringa:
+
+```python
+lorem_ipsum = "Lorem ipsum dolor sit amet, consectetur adipiscing elit," \
+              "sed do eiusmod tempor incididunt ut labore et dolore" \
+              "magna aliqua. Ut enim ad minim veniam, quis nostrud " \
+              "exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat."
+
+```
+
+Inną metodą podziału linii jest zapis całości w nawiasach okrągłych:
+
+```python
+lorem_ipsum = ("Lorem ipsum dolor sit amet, consectetur adipiscing elit,"
+              "sed do eiusmod tempor incididunt ut labore et dolore"
+              "magna aliqua. Ut enim ad minim veniam, quis nostrud "
+              "exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.")
+```
 ---
 ---
 ---
