--- a/Python od podstaw/7. Jakość kodu i obsługa błędów.md
+++ b/Python od podstaw/7. Jakość kodu i obsługa błędów.md
@@ -218,7 +218,7 @@ Wykonując skrypt należy wybrać opcję *Debug* zamiast *Run*. Kiedy program do
 ### 7.5 Linebreak
 Jeśli linijka kodu jest zbyt długa możemy na różne sposoby ją złamać, czyli przenieść jej część do kolejnej linii. Takie przeniesienie nazywane jest *linebreak*. 
 
-Jeśli definiujemy strukturę danych, której elementy znajdują się w różnego rodzaju nawiasach, możemy wstawić nową linię po dowolnym nawiasie:
+Jeśli definiujemy strukturę danych możemy wstawić nową linię po dowolnym jej elemencie:
 
 ```python
 list_of_zombies = [
@@ -240,7 +240,19 @@ list_of_zombies = [
 ]
 ```
 
-Jeśli chcemy złamać linię, w której nie ma nawiasów możemy użyć znaku `\` np. przed operatorem takim jak `+` czy `-`:
+Podobnie ma to miejsce w przypadku definicji czy wywołania funkcji z wieloma parametrami:
+
+```python
+def multi_parameter_function(a, b,
+							 c, d):
+	return a * b * c * d
+
+
+multi_parameter_function(a=1, b=2,
+						 c=3, d=4)
+```
+
+W pozostałych wypadkach możemy użyć znaku `\` np. przed operatorem takim jak `+` czy `-`:
 
 ```python
 1 + 1 + 1 + 1 + 1 + 1 + 1 \
@@ -265,6 +277,15 @@ lorem_ipsum = ("Lorem ipsum dolor sit amet, consectetur adipiscing elit,"
               "magna aliqua. Ut enim ad minim veniam, quis nostrud "
               "exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.")
 ```
+
+```python
+x = (1 + 2 + 3 + 4
+     + 5 + 6 + 7)
+```
+
+**Linebreak - podsumowanie:**
+- Jeżeli linia kodu jest zbyt długa należy ją złamać, czyli zastosować *linebreak*
+- W kolekcjach
 ---
 ---
 ---
