Just another update

--- a/Python od podstaw/7. Jakość kodu i obsługa błędów.md
+++ b/Python od podstaw/7. Jakość kodu i obsługa błędów.md
@@ -285,7 +285,9 @@ x = (1 + 2 + 3 + 4
 
 **Linebreak - podsumowanie:**
 - Jeżeli linia kodu jest zbyt długa należy ją złamać, czyli zastosować *linebreak*
-- W kolekcjach
+- W strukturach danych przejście do nowej linii może nastąpić po dowolnym elemencie kolekcji. Podobnie podczas definicji czy wywołania funkcji z wieloma parametrami
+- W pozostałych przypadkach *linebreak* może być oznaczony również poprzez znak `\`
+- Jeśli kod znajdzie się w nawiasach okrągłych możemy zapisać go w kilku linijkach
 ---
 ---
 ---
