Just another update

--- a/Python od podstaw/7. Jakość kodu i obsługa błędów.md
+++ b/Python od podstaw/7. Jakość kodu i obsługa błędów.md
@@ -293,7 +293,171 @@ x = (1 + 2 + 3 + 4
 ---
 &nbsp;
 ### 7.6 Wyjątki
+Jeżeli z jakiegoś powodu napisany przez nas kod nie będzie mógł zostać wykonany, interpreter zwróci błąd, nazywany również wyjątkiem (ang. *exception*).
 
+#### 7.6.1 Rodzaje błędów / wyjątków
+Poniżej znajdują się przykłady najczęściej spotykanych błędów.
+
+**SyntaxError**
+```python
+2 + '
+
+# ---
+Input In [1]
+    2 + '
+         ^
+SyntaxError: EOL while scanning string literal
+```
+
+**TypeError**
+```python
+"a" * "b"
+
+# ---
+TypeError                                 Traceback (most recent call last)
+Input In [2], in <cell line: 1>()
+----> 1 "a" * "b"
+
+TypeError: can't multiply sequence by non-int of type 'str'
+```
+
+**AttributeError**
+```python
+[1, 2, 3].add([3, 4])
+
+# ---
+AttributeError                            Traceback (most recent call last)
+Input In [3], in <cell line: 1>()
+----> 1 [1, 2, 3].add([3, 4])
+
+AttributeError: 'list' object has no attribute 'add'
+```
+
+**ZeroDivisionError**
+```python
+2 / 0
+
+# ---
+ZeroDivisionError                         Traceback (most recent call last)
+Input In [4], in <cell line: 1>()
+----> 1 2 / 0
+
+ZeroDivisionError: division by zero
+```
+
+**NameError**
+```python
+xyz
+
+# ---
+NameError                                 Traceback (most recent call last)
+Input In [5], in <cell line: 1>()
+----> 1 xyz
+
+NameError: name 'xyz' is not defined
+```
+
+**ValueError**
+```python
+int("a")
+
+# ---
+ValueError                                Traceback (most recent call last)
+Input In [6], in <cell line: 1>()
+----> 1 int("a")
+
+ValueError: invalid literal for int() with base 10: 'a'
+```
+
+#### 7.6.2 `try-except`
+Czasami chcemy wykonać jakiś kawałek kodu, ale spodziewamy się że może pojawić się w nim określony błąd. Możemy zapisać taki kod w bloku `try` i "przechwycić" wyjątek za pomocą `except`. Następnie znajduje się blok kodu, który zostanie wykonany jeśli wystąpi dany błąd.
+
+W poniższym przykładzie dzielimy przez siebie liczby `a` i `b`, ale jeśli okaże się że `b` jest równe 0 zwracamy `None`:
+
+```python
+def divide(a, b):
+    try:
+        return a / b
+    except ZeroDivisionError:
+        return None
+```
+
+Możemy również przygotować blok `except` na dowolny błąd przechwytując każdy wyjątek (`Exception`) - zwykle aliasowany jako `e`:
+
+```python
+def divide(a, b):
+    try:
+        return a / b
+    except Exception as e:
+        print(e)
+        return None
+```
+
+#### 7.6.3 Generowanie wyjątków
+Może się zdarzyć, że chcemy jakiś wyjątek wygenerować samodzielnie. Używamy do tego słowa kluczowego `raise`, nazwy błędu oraz komunikatu jaki ma zostać wyświetlony:
+
+```python
+raise TypeError("Błędny typ")
+
+# ---
+TypeError                                 Traceback (most recent call last)
+Input In [1], in <cell line: 1>()
+----> 1 raise TypeError("Błędny typ")
+
+TypeError: Błędny typ
+```
+
+```python
+numbers = [1, 2, 0, 3]
+for number in numbers:
+    if number == 0:
+        raise Exception("Wartość jest równa 0!")
+    
+    print(1 / number)
+```
+
+#### 7.6.4 `assert`
+Jeżeli w dowolnym miejscu kodu chcemy upewnić się że pewien warunek logiczny jest spełniony - a jeśli nie jest wyrzucić błąd - możemy użyć słowa kluczowego `assert`.
+
+```python
+x = 2
+
+assert x == 1
+
+print("x jest równe 1")
+```
+
+Ze względu na niespełnienie warunki logicznego za `assert` powyższy kod zwróci następujący błąd:
+
+```python
+AssertionError                            Traceback (most recent call last)
+Input In [2], in <cell line: 3>()
+      1 x = 2
+----> 3 assert x == 1
+      5 print("x jest równe 1")
+
+AssertionError:
+```
+
+Inny przykład użycia `assert`:
+
+```python
+even_numbers = [0, 2, 4, 6, 8]
+
+def check_if_even(list_):
+    for item in list_:
+        assert item % 2 == 0
+    
+    print("All numbers are even")
+
+check_if_even(even_numbers)
+```
+
+**Wyjątki - podsumowanie:**
+- Różne rodzaje błędów wykonywania programu zwracają różne wyjątki. Zwrócenie wyjątku przerywa działanie programu
+- Aby pojawienie się błędu nie przerwało pracy programu używamy konstrukcji `try-except`, która pozwala przechwycić dowolny wyjątek
+- Możemy podnieść wyjątek za pomocą słowa kluczowego `raise`
+- Aby upewnić się, że pewien warunek jest spełniony używamy słowa kluczowego `assert`. Niespełnienie warunku spowoduje wyrzucenie błędu
 ---
 ---
 ---
