--- a/Python od podstaw/7. Jakość kodu i obsługa błędów.md
+++ b/Python od podstaw/7. Jakość kodu i obsługa błędów.md
@@ -1,5 +1,5 @@
 ### 7.1 PEP 8
-Nie każdy kod, który się wykonuje jest dobrym, poprawnie napisanym kodem. Istnieje szereg zaleceń dotyczących właściwego formatowania kodu. Są one opisane w dokumencie o nazwie [PEP 8](https://peps.python.org/pep-0008/). Poniżej znajduje się kilka przykładów:
+Nie każdy kod, który się wykonuje jest poprawnie napisany. Istnieje szereg zaleceń dotyczących właściwego formatowania kodu. Są one opisane w dokumencie o nazwie [PEP 8](https://peps.python.org/pep-0008/). Poniżej znajduje się kilka przykładów:
 
 1. Używamy snake case'a
 ```python
@@ -11,9 +11,11 @@ variable_name = "abc"
 variableName = "abc"
 ```
 
+---
 2. Zalecana maksymalna długość linii to 79 znaków
 Ta reguła często jest świadomie ignorowana. Jeśli posiadanie w kodzie dłuższych linii nam nie przeszkadza, możemy zwiększyć długość np. do 100 znaków. Dobrze jednak jest mieć z góry określone maksimum i nie przekraczać go.
 
+---
 3. Maksymalnie dwie linie przerwy w kodzie. Kiedy jesteśmy wewnątrz funkcji - maksymalnie jedna
 
 ```python
@@ -29,6 +31,7 @@ print(2+2)  # dwie linie przerwy
 print(2+2)  # trzy linie przerwy - za dużo
 ```
 
+---
 4. Spacje wokół operatora przypisania podczas tworzenia zmiennych
 ```python
 # Dobrze
@@ -39,6 +42,7 @@ x = 1
 x=1
 ```
 
+---
 5. Brak spacji wokół operatora przypisania podczas przekazywania argumentów do funkcji
 ```python
 # Dobrze
