--- a/Python od podstaw/7. Jakość kodu i obsługa błędów.md
+++ b/Python od podstaw/7. Jakość kodu i obsługa błędów.md
@@ -57,13 +57,13 @@ def func(a = 1, b = 2):
 
 **PEP 8 - podsumowanie:**
 - Istnieje szereg zaleceń dotyczących pisania poprawnego stylistycznie kodu - można znaleźć jej w PEP 8
-- Trzymanie się tych zasad sprawi że kod będzie bardziej czytelny a także zachowaspójność kiedy pracuje nad nim więcej osób
+- Trzymanie się tych zasad sprawi że kod będzie bardziej czytelny a także zachowa spójność kiedy pracuje nad nim więcej osób
 ---
 ---
 ---
 &nbsp;
 ### 7.2 Type annotations
-Python jest językiem typowanym dynamicznie, w związku z czym deklarowanie typów zmiennych czy argumentów funkcji nie jest konieczne. Istnieje jednak taka możliwość i korzystanie z niej sprawia, że kod jest bardziej czytelny. Dzięki temu kiedy widzimy po raz pierwszy definicję funkcji czy zmiennej od razu wiemy jakich typów danych możemy się spodziewać.
+Python jest językiem typowanym dynamicznie, w związku z czym deklarowanie typów zmiennych czy argumentów funkcji nie jest konieczne. Istnieje jednak taka możliwość i korzystanie z niej sprawia, że kod jest bardziej czytelny. Dzięki temu kiedy widzimy po raz pierwszy definicję funkcji czy zmiennej od razu wiemy jakich typów danych możemy się tam spodziewać.
 
 Typy danych dla argumentów funkcji czy zmiennych anotujemy w następujący sposób:
 ```python
@@ -129,7 +129,7 @@ def determine_winner(human_power: Union[int, float], zombie_power: Union[int, fl
 ---
 &nbsp;
 ### 7.3 Stack Overflow
-Jednym z nieodłącznych elementów programowania jest szukanie rozwiązań pojawiających się problemów w internecie. Często odpowiedź na nasze pytanie już są przygotowana i znajdują się na [Stack Overflow](https://stackoverflow.com/). Jest to serwis, na którym programiści mogą zapytać o to jak rozwiązać pewien problem albo co oznacza błąd, którego nie rozumieją. 
+Jednym z nieodłącznych elementów programowania jest szukanie rozwiązań pojawiających się problemów w internecie. Często odpowiedzi na nasze pytania są już przygotowane i znajdują się na [Stack Overflow](https://stackoverflow.com/). Jest to serwis, na którym programiści mogą zapytać o to jak rozwiązać pewien problem albo co oznacza błąd, którego nie rozumieją. 
 
 Wynika ze Stacka często pojawiają się wysoko w wynikach wyszukiwania:
 ![[stack1.png]]
