Just another update

--- a/Python od podstaw/7. Jakość kodu i obsługa błędów.md
+++ b/Python od podstaw/7. Jakość kodu i obsługa błędów.md
@@ -131,7 +131,7 @@ def determine_winner(human_power: Union[int, float], zombie_power: Union[int, fl
 ### 7.3 Stack Overflow
 Jednym z nieodłącznych elementów programowania jest szukanie rozwiązań pojawiających się problemów w internecie. Często odpowiedzi na nasze pytania są już przygotowane i znajdują się na [Stack Overflow](https://stackoverflow.com/). Jest to serwis, na którym programiści mogą zapytać o to jak rozwiązać pewien problem albo co oznacza błąd, którego nie rozumieją. 
 
-Wynika ze Stacka często pojawiają się wysoko w wynikach wyszukiwania:
+Linki do Stacka często pojawiają się wysoko w wynikach wyszukiwania:
 ![[stack1.png]]
 
 ![[stack2.png]]
