Just another update

--- a/Python od podstaw/7. Jakość kodu i obsługa błędów.md
+++ b/Python od podstaw/7. Jakość kodu i obsługa błędów.md
@@ -149,7 +149,7 @@ Jedną z zalet Stack Overflow jest system punktacji zarówno pytań jak i odpowi
 Debugowanie (ang. *debugging*) to proces szukania i naprawiania błędów w programie. Istnieją różne sposoby na to żeby zlokalizować błędny zapis w kodzie. Przykładowe dwa to:
 
 #### 7.4.1 Analiza *tracebacku*
-*Traceback* to komunikat, który zostaje wyświetlony w terminalu w momencie kiedy w trakcie wykonywania programu pojawi się błąd. Zawiera on informację o tym, w której linijce znajduje się problem a także - jeśli wywołujemy tam jakąś funkcję - gdzie w tej funkcji zlokalizowany jest błąd. W ten sposób możemy dokładnie prześledzić łańcuch wywołań kolejnych funkcji i zlokalizować buga.
+*Traceback* to komunikat, który zostaje wyświetlony w terminalu w momencie kiedy w trakcie wykonywania programu pojawi się błąd. Zawiera on informację o tym, w której linijce znajduje się problem a także - jeśli wywołujemy tam jakąś funkcję - gdzie błąd zlokalizowany jest w tej funkcji. W ten sposób możemy dokładnie prześledzić łańcuch wywołań kolejnych funkcji i zlokalizować buga.
 
 W poniższym kodzie w funkcji `decide_where_to_move` znajduje się błąd:
 
@@ -207,7 +207,7 @@ Debuger jest narzędziem, które pozwala zatrzymać wykonywanie programu w zadan
 ![[debuger1.png]]
 
 Wykonując skrypt należy wybrać opcję *Debug* zamiast *Run*. Kiedy program dotrze do *breakpointa* - zatrzyma się. Możemy wówczas między innymi:
-- wpisywać do terminala wyrażenia, których wartość chcemy wyznaczyć (np. `humans_list[0]["x"`)
+- wpisywać do terminala wyrażenia, których wartość chcemy wyznaczyć (np. `humans_list[0]["x"]`)
 - przejść do kolejnej linijki w ramach scope'u, w którym się znajdujemy (w PyCharmie nazywa się to `Step Over`)
 - wejść do środka funkcji, której wywołanie znajduje się w aktualnej linii (w PyCharmie nazywa się to `Step Into`)
 
@@ -304,7 +304,7 @@ Poniżej znajdują się przykłady najczęściej spotykanych błędów.
 
 **SyntaxError**
 ```python
-2 + '
+>>> 2 + '
 
 # ---
 Input In [1]
@@ -315,7 +315,7 @@ SyntaxError: EOL while scanning string literal
 
 **TypeError**
 ```python
-"a" * "b"
+>>> "a" * "b"
 
 # ---
 TypeError                                 Traceback (most recent call last)
@@ -327,7 +327,7 @@ TypeError: can't multiply sequence by non-int of type 'str'
 
 **AttributeError**
 ```python
-[1, 2, 3].add([3, 4])
+>>> [1, 2, 3].add([3, 4])
 
 # ---
 AttributeError                            Traceback (most recent call last)
@@ -339,7 +339,7 @@ AttributeError: 'list' object has no attribute 'add'
 
 **ZeroDivisionError**
 ```python
-2 / 0
+>>> 2 / 0
 
 # ---
 ZeroDivisionError                         Traceback (most recent call last)
@@ -351,7 +351,7 @@ ZeroDivisionError: division by zero
 
 **NameError**
 ```python
-xyz
+>>> xyz
 
 # ---
 NameError                                 Traceback (most recent call last)
@@ -363,7 +363,7 @@ NameError: name 'xyz' is not defined
 
 **ValueError**
 ```python
-int("a")
+>>> int("a")
 
 # ---
 ValueError                                Traceback (most recent call last)
