Just another update

--- a/Python od podstaw/7. Jakość kodu i obsługa błędów.md
+++ b/Python od podstaw/7. Jakość kodu i obsługa błędów.md
@@ -431,7 +431,7 @@ assert x == 1
 print("x jest równe 1")
 ```
 
-Ze względu na niespełnienie warunki logicznego za `assert` powyższy kod zwróci następujący błąd:
+Ze względu na niespełnienie warunku logicznego za `assert` powyższy kod zwróci następujący błąd:
 
 ```python
 AssertionError                            Traceback (most recent call last)
