Just another update

--- a/Python od podstaw/3. Struktury danych.md
+++ b/Python od podstaw/3. Struktury danych.md
@@ -999,11 +999,74 @@ Listy, sety oraz dicty są mutowalne i niehashowalne. Próba wyznaczenia ich has
 ---
 
 #### 3.9.3 Kopiowanie obiektów
+Jeżeli chcemy utworzyć nową referencję do obiektu niemutowalnego możemy zrobić to w następujący sposób:
+```python
+a = 1
 
+new_a = a
+
+print(id(a))
+print(id(new_a))
+
+# 140535103674672
+# 140535103674672
+```
+
+W powyższym przykładzie `a` oraz `new_a` są dwiema referencjami do tego samego obiektu w pamięci. Jeżeli nadpiszemy którąś z nich to od tego czasu będzie ona wskazywała na inny obiekt, ponieważ nadpisanie referencji to nie to samo co modyfikacja obiektu.
+
+```python
+new_a = 10
+
+print(id(a))
+print(id(new_a))
+
+# 140535103674672
+# 140535103674960
+```
+
+Podobnie działa to dla pozostałych typów niemutowalnych.
+
+Jeżeli zdefiniujemy mutowalny obiekt a następnie używając go utworzymy nową referencję to również będą to dwie referencje do tego samego obiektu. Co za tym idzie - jeżeli zmodyfikujemy obiekt korzystając z jednej referencji, druga referencja będzie dalej wskazywać na ten sam (zmodyfikowany) obiekt.
+
+```python
+c = [1, 2]
+new_c = c
+
+print(id(c))
+print(id(new_c))
+
+# 140534439771584
+# 140534439771584
+
+new_c.append("new_item")
+
+print(new_c)   
+print(c)
+
+# [1, 2, 'new_item']
+# [1, 2, 'new_item']
+```
+
+Takie zachowanie nie zawsze jest oczekiwane. Czasem chcemy stworzyć niezależną kopię obiektu, której modyfikacja nie wpłynie na oryginalny obiekt. Ma to sens przede wszystkim dla obiektów mutowalnych. Słowniki oraz listy posiadają metodę `.copy()`, którą możemy wywołać na obiektach tych klas (typów) w celu utworzenia niezależnej kopii.
+
+```python
+d = [1, 2, 3]
+new_d = d.copy()
+
+new_d.append(4)
+
+print(d)
+print(new_d)
+
+# [1, 2, 3]
+# [1, 2, 3, 4]
+```
 
 ---
- **podsumowanie:**
- - ...
+ **Mutowalność, hashowalność i kopiowanie obiektów - podsumowanie:**
+ - Obiekty w Pythonie mogą być mutowalne (możliwe do modyfikacji) albo niemutowalne (niemożliwe do modyfikacji)
+ - Obiekty w Pythonie mogą być hashowalne (da się z nich policzyć hash) albo niehashowalne. Klucze słownika oraz elementy setu muszą być hashowalne
+ - Kiedy tworzymy nową referencję do tego samego - mutowalnego - obiektu, jego modyfikacja za pomocą jednej z referencji będzie widoczna również kiedy korzystamy z drugiej. W celu utworzenia niezależnej kopii listy czy słownika możemy skorzystać z metody `.copy()`
 ---
 ---
 ---
