Just another update

--- a/Python od podstaw/3. Struktury danych.md
+++ b/Python od podstaw/3. Struktury danych.md
@@ -959,7 +959,7 @@ hash(12)
 # 12
 ```
 
-Hash wartości logicznej *True*/*False* to 1 / 0 czyli jest taki sam jak hash liczb całkowitych 1 / 0.
+Hash wartości logicznej *True* / *False* to 1 / 0 czyli jest taki sam jak hash liczb całkowitych 1 / 0.
 ```python
 hash(True)
 
@@ -1016,6 +1016,11 @@ W powyższym przykładzie `a` oraz `new_a` są dwiema referencjami do tego sameg
 
 ```python
 new_a = 10
+
+print(new_a)
+print(a)
+# 10
+# 1
 
 print(id(a))
 print(id(new_a))
