Just another update

--- a/Python od podstaw/3. Struktury danych.md
+++ b/Python od podstaw/3. Struktury danych.md
@@ -511,7 +511,7 @@ print(allowed_classes)
 ---
 3. **`pop`**
 ```python
-allowed_classes.pop()  # usuwa i zwraca "ostatni" element zbioru
+allowed_classes.pop()  # usuwa i zwraca losowy element zbioru
 
 # 'zombie'
 ```
