Just another update

--- a/Python od podstaw/4. Instrukcje warunkowe.md
+++ b/Python od podstaw/4. Instrukcje warunkowe.md
@@ -97,9 +97,9 @@ Kiedy chcemy połączyć warunki logiczne dotyczące relacji mniejszości lub wi
 Bardzo często zdarza się, że pewien fragment kodu chcemy wykonać tylko wtedy jeśli spełniony zostanie określony warunek logiczny. W tym celu używamy instrukcji warunkowych. Instrukcja warunkowa zaczyna się od słowa kluczowego *if* po którym znajduje się warunek logiczny. Na końcu linii nalezy postawić dwukropek a kolejna linia (linie) kodu musi być wcięta - najczęściej z użyciem 4 spacji. Cały kod, który znajduje we wciętym bloku pod linijką zawierającą `if <warunek logiczny>:` wykona się tylko wtedy jeśli warunek logiczny zwróci wartość *True*. Poniżej kilka przykładów:
 
 ```python
-numbers_of_zombies = 0
+number_of_zombies = 0
 
-if numbers_of_zombies ＝＝ 0:
+if number_of_zombies ＝＝ 0:
     print("Symulacja skończona, wygrali ludzie")
 
 #  'Symulacja skończona, wygrali ludzie'
