--- a/Python od podstaw/8. Moduły.md
+++ b/Python od podstaw/8. Moduły.md
@@ -2,6 +2,15 @@
 Wiele funkcji z których możemy korzystać programując w Pythonie nie jest wbudowanych, co oznacza że nie możemy ich używać w taki sam sposób jak np. `print()`, `round()` czy `len()`. Najczęściej zbiory funkcji oraz klas, które służą do rozwiązywania konkretnych problemów znajdują się w tzw. bibliotekach (zwanych również modułami). Te z kolei mogą (choć nie muszą) być częścią biblioteki standardowej czyli zbioru takich modułów, których nie ma potrzeby dodatkowo instalować. Należą do nich np. `math`, `random` czy `os`.
 
 Oprócz tej ograniczonej liczby bibliotek, które są "wbudowane" w interpreter mamy również wiele modułów tworzonych przez użytkowników Pythona, które możemy doinstalować i również z nich korzystać. Listę wszystkich otwartoźródłowych modułów wraz z instrukcjami dotyczącymi instalacji możemy znaleźć na stronie `https://pypi.org/`. Przykładowo - jeśli chcę użyć w projekcie biblioteki `numpy` to szukam jej na `pypi.org` (**Py**thon **P**ackage **I**ndex) a następnie w terminalu uruchamiam komendę `pip install <nazwa biblioteki>`.
+
+Żeby użyć danego modułu należy go najpierw zaimportować w kodzie programu za pomocą `import <nazwa biblioteki>`
+
+---
+**Ogólne informacje - podsumowanie:**
+- Funkcje i klasy służące do rozwiązywania konkretnych problemów mogą być zamknięte w moduły i udostępnione dla innych programistów
+- Niektóre moduły są wbudowane w interpreter (biblioteka standardowa Pythona) a inne muszą być instalowane. Indeks bibliotek możliwych do zainstalowania znajduje się na `https://pypi.org/`
+- Aby używać funkcji należących do danej biblioteki musimy ją najpierw zaimportować w kodzie programu
+
 ---
 ---
 ---
