--- a/Python od podstaw/8. Moduły.md
+++ b/Python od podstaw/8. Moduły.md
@@ -9,13 +9,56 @@ Oprócz tej ograniczonej liczby bibliotek, które są w pakiecie z interpreterem
 **Ogólne informacje - podsumowanie:**
 - Funkcje i klasy służące do rozwiązywania konkretnych problemów mogą być zamknięte w moduły i udostępnione dla innych programistów
 - Niektóre moduły są wbudowane w interpreter (biblioteka standardowa Pythona) a inne muszą być instalowane. Indeks bibliotek możliwych do zainstalowania znajduje się na `https://pypi.org/`
-- Aby używać funkcji należących do danej biblioteki musimy ją najpierw zaimportować w kodzie programu
+- Aby używać funkcji należących do danej biblioteki musimy ją najpierw zaimportować
 
 ---
 ---
 ---
 &nbsp;
 ### 8.2 Przykładowe moduły biblioteki standardowej
+Poniżej znajdują się przykłady użycia dwóch modułów będących częścią biblioteki standardowej.
+
+### `math`
+```python
+import math
+
+math.pi
+# 3.141592653589793
+
+math.sin(math.pi)
+# 1.2246467991473532e-16
+# wynik został obliczony niedokładnie ze względu na niemożliwe
+# do uniknięcia błędy numeryczne
+
+math.exp(2)
+# 7.38905609893065
+
+math.e
+# 2.718281828459045
+
+math.sqrt(16)
+# 4.0
+
+math.floor(3.9)  # funkcja zaokrąglająca w dół
+# 3
+
+math.ceil(2.1)  # funkcja zaokrąglająca w górę
+# 3
+```
+
+### `random`
+```python
+import random
+
+random.random()  # # losowa liczba z zakresu [0, 1]
+# 0.8079640823326915
+
+random.randint(2, 5)  # losowa liczba całkowita z zakresu [2, 5]
+
+random.choice([1, 3, 5])  # losowo wybrany element z listy
+# 3
+```
+
 
 ---
 ---
