--- a/Python od podstaw/8. Moduły.md
+++ b/Python od podstaw/8. Moduły.md
@@ -54,6 +54,7 @@ random.random()  # # losowa liczba z zakresu [0, 1]
 # 0.8079640823326915
 
 random.randint(2, 5)  # losowa liczba całkowita z zakresu [2, 5]
+# 4
 
 random.choice([1, 3, 5])  # losowo wybrany element z listy
 # 3
@@ -65,7 +66,42 @@ random.choice([1, 3, 5])  # losowo wybrany element z listy
 ---
 &nbsp;
 ### 8.3 Import kodu z innych plików
+Aby w pliku z kodem móc używać funkcji czy innych obiektów zdefiniowanych w pozostałych plikach należy te obiekty zaimportować w podobny sposób jak moduły. Dla następującej struktury projektu:
 
+```
+├── folder/
+│   ├── functions.py
+|
+├── main.py
+│── another_file.py
+```
+---
+
+---
+`folder/functions.py`
+```python
+def example_funcion():
+    return 1
+```
+
+---
+`another_file.py`
+```python
+def another_funcion():
+    return 2
+```
+
+---
+możemy w pliku `main.py` zaimportować funkcje z dwóch pozostałych plików za pomocą poniższego kodu:
+
+```python
+from another_file import another_function
+from folder.functions import example_funcion
+
+
+another_function()
+example_funcion()
+```
 ---
 ---
 ---
