Just another update

--- a/Python średniozaawansowany/7. Testy jednostkowe.md
+++ b/Python średniozaawansowany/7. Testy jednostkowe.md
@@ -1,25 +1,25 @@
-### 12.1 Data i czas
+### 7.1 Asercje
 ...
 
 ---
 ---
 ---
 &nbsp;
-### 12.2 Rekurencja
+### 7.2 Biblioteka pytest
 ...
 
 ---
 ---
 ---
 &nbsp;
-### 12.3 Generatory
+### 7.3 Fixtures
 ...
 
 ---
 ---
 ---
 &nbsp;
-### 12.4 Logowanie
+### 7.4 Test Driven Development
 ...
 
 ---
