Just another update

--- a/Python średniozaawansowany/8. Pozostałe zagadnienia.md
+++ b/Python średniozaawansowany/8. Pozostałe zagadnienia.md
@@ -12,28 +12,35 @@
 ---
 ---
 &nbsp;
-### 8.3 Pliki konfiguracyjne
+### 8.3 Locale
 ...
 
 ---
 ---
 ---
 &nbsp;
-### 8.4 Statyczna analiza kodu
+### 8.4 Pliki konfiguracyjne
 ...
 
 ---
 ---
 ---
 &nbsp;
-### 8.5 Generatory oraz iteratory
+### 8.5 Statyczna analiza kodu
 ...
 
 ---
 ---
 ---
 &nbsp;
-### 8.6 Dekoratory
+### 8.6 Generatory oraz iteratory
+...
+
+---
+---
+---
+&nbsp;
+### 8.7 Dekoratory
 ...
 
 ---
