Just another update

--- a/Python podstawowy/9. Programowanie obiektowe.md
+++ b/Python podstawowy/9. Programowanie obiektowe.md
@@ -1,47 +1,71 @@
 ### 9.1 Klasa oraz obiekt
-...
+Kiedy pisany przez nas kod się rozrasta, coraz trudniej jest utrzymać go w stanie możliwym do modyfikacji i utrzymywania. Liczba zmiennych i funkcji staje się większa a zależności między nimi są coraz trudniejsze do uchwycenia. Rozwiązaniem tego problemu może być wykorzystanie paradygmatu obiektowego.
 
+Programowanie zorientowane obiektowo (ang. _Object oriented programming_) to podejście do pisania kodu, które zakłada, że poszczególne funkcjonalności zostają zamknięte w tzw. klasach czyli mniejszych, niezależnych częściach. Klasa zawiera opis wszystkich własności oraz działań, jakie możemy wykonywać na jej przedstawicielach. Dodatkowo klasy pozwalają używać ujednoliconego interfejsu odnoszenia się do poszczególnych jej części składowych.
+
+Klasy mogą symulować rzeczywisty świat, ale mogą również opisywać byty abstrakcyjne, np. typ *int* czy *string.*
+
+Przedstawiciela klasy nazywamy jej instancją albo obiektem. Każdy obiekt może mieć określone wartości przypisane do swoich atrybutów czyli czegoś w rodzaju zmiennych specyficznych dla danej klasy. Możemy na nim również wywoływać funkcje specyficzne dla klasy, czyli metody.
 ---
 ---
 ---
 &nbsp;
 ### 9.2 Definicja klasy, konstruktor, atrybuty
-...
+### Przykłady klas wbudowanych
+
+**String**
+Klasa - *str*
+Obiekt - dowolny string
+Przykładowe metody: `.lower()`, `.upper()`, `.capitalize()`
+
+**Lista**
+Klasa - *list*
+Obiekt - dowolna lista
+Przykładowe metody: `.append()`, `.extend()`, `.count()`
+
+### Klasy definiowane przez nas
+
+Załóżmy, że ludzie i zombie to obiekty, które możemy zamodelować zestawem 5 parametrów:
+- współrzędna x
+- współrzędna y
+- szybkość
+- siła
+- liczba zabitych / zainfekowanych przeciwników
+
+Tak wyglądać może schemat klasy `Human`. Wymienione są jej atrybuty (czyli cechy, własności) oraz metody (operacje, jakie możemy wykonać na instancji klasy). Poniżej mamy klka obiektów, których atrybuty mają określoną wartość.
+
+![[klasa_human.png]]
+
 
 ---
 ---
 ---
 &nbsp;
 ### 9.3 Metody
-...
 
 ---
 ---
 ---
 &nbsp;
 ### 9.4 staticmethod, classmethod
-...
 
 ---
 ---
 ---
 &nbsp;
 ### 9.5 Dziedziczenie
-...
 
 ---
 ---
 ---
 &nbsp;
 ### 9.6 Stringifikacja i reprezentacja
-...
 
 ---
 ---
 ---
 &nbsp;
 ### 9.7 class attribute
-...
 
 ---
 ---
