Just another update

--- a/Python podstawowy/9. Programowanie obiektowe.md
+++ b/Python podstawowy/9. Programowanie obiektowe.md
@@ -13,7 +13,7 @@ Przedstawiciela klasy nazywamy jej instancją albo obiektem. Każdy obiekt może
 ---
 &nbsp;
 ### 9.2 Definicja klasy, konstruktor, atrybuty
-### Przykłady klas wbudowanych
+#### 9.2.1 Przykłady klas wbudowanych
 
 **String**
 Klasa - *str*
@@ -25,7 +25,7 @@ Klasa - *list*
 Obiekt - dowolna lista
 Przykładowe metody: `.append()`, `.extend()`, `.count()`
 
-### Klasy definiowane przez nas
+#### 9.2.2 Klasy definiowane przez nas
 
 Załóżmy, że ludzie i zombie to obiekty, które możemy zamodelować zestawem 5 parametrów:
 - współrzędna x
@@ -36,7 +36,7 @@ Załóżmy, że ludzie i zombie to obiekty, które możemy zamodelować zestawem
 
 Tak wyglądać może schemat klasy `Human`. Wymienione są jej atrybuty (czyli cechy, własności) oraz metody (operacje, jakie możemy wykonać na instancji klasy). Poniżej mamy klka obiektów, których atrybuty mają określoną wartość.
 
-![[klasa_human.png]]
+![[jupyter.png]]
 
 
 ---
