--- a/Python podstawowy/9. Programowanie obiektowe.md
+++ b/Python podstawowy/9. Programowanie obiektowe.md
@@ -36,9 +36,9 @@ Załóżmy, że ludzie i zombie to obiekty, które możemy zamodelować zestawem
 
 Tak wyglądać może schemat klasy `Human`. Wymienione są jej atrybuty (czyli cechy, własności) oraz metody (operacje, jakie możemy wykonać na instancji klasy). Poniżej mamy klka obiektów, których atrybuty mają określoną wartość.
 
-![[jupyter.png]]
+![[klasa_human.png]]
 
-
+d
 ---
 ---
 ---
